# Graduate-Crawling

./: CLAUDE.md  README.md  pytorch 怎么用.md
.claude/: settings.local.json
.claudian/: claudian-settings.json
.claudian/sessions/: conv-1779015301878-l73oi7ro1.meta.json  conv-1779084838599-43rcs33kh.meta.json
.obsidian/: community-plugins.json
.obsidian/plugins/copilot/: data.json  main.js  styles.css
.obsidian/plugins/csv-allinone/: main.js  manifest.json
.obsidian/plugins/editing-toolbar/: data.json
.obsidian/plugins/jupyter-viewer/: main.js  manifest.json  styles.css
.obsidian/plugins/obsidian-custom-attachment-location/: data.json
.obsidian/plugins/obsidian-excalidraw-plugin/: data.json  manifest.json  styles.css
.obsidian/plugins/obsidian-git/: data.json  (+1 more)
Excalidraw/: Drawing 2026-05-18 00.03.36.excalidraw.md  Drawing 2026-05-20 17.22.19.excalidraw.md
code/Lhy_Machine_Learning/: .gitignore  main.py  pyproject.toml
code/Lhy_Machine_Learning/2021 ML/01 Introduction/作业HW1/: COVID-19.ipynb  Google_Colab_Tutorial.ipynb  Pytorch_Tutorial.ipynb  submission.csv
code/Lhy_Machine_Learning/2021 ML/01 Introduction/作业HW1/models/: model.pth
code/Lhy_Machine_Learning/2021 ML/02 Deep Learning/作业HW2/: SHARE_MLSpring2021_HW2_1.ipynb  phoneme-classification.ipynb
code/Lhy_Machine_Learning/2022 ML/00 Colab&Pytorch/: Google_Colab_Tutorial.ipynb
notes/: Loss函数解读.md  Q&A.md  数据分析总览.md  特征分析：如何找出关键特征.md
notes/Q&A/: HW1.md  HW2.md
papers/研0/: pytorch 怎么用.md  什么是科研我要怎么开始.md  科研全流程.excalidraw
tools/: Python Q&A.md  pytorch 怎么用.md
tools/Q&A/: HW1.md
(+6 files in other folders)
