[project]
name = "lhy-machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "einops>=0.8.2",
    "ema-pytorch>=0.7.9",
    "gdown>=6.0.0",
    "gymnasium>=1.3.0",
    "imgaug>=0.4.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "sacremoses>=0.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "wandb>=0.27.0",
]
